--- a/src/app/components/homepage/homepage.component.sass
+++ b/src/app/components/homepage/homepage.component.sass
@@ -45,6 +45,7 @@ div.icon-container
     opacity: 0
     width: 75%
     height: auto
+    position: absolute
 
 @keyframes fling-minislide 
     25% 
